--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,6 @@ button {
 /* Benefits section styles */
 
 .benefits-icon {
-  
 }
 
 .bnfts-bg-color {
@@ -540,7 +539,7 @@ button {
 
 .prtfl-wrapper {
   position: relative;
-  
+
   overflow: hidden;
 }
 
@@ -701,35 +700,33 @@ button {
 .form {
   display: flex;
   flex-direction: column;
-  
 
   max-width: 408px;
   padding: 72px 24px 24px;
 }
 
-.modal-caption{
+.modal-caption {
   display: block;
   color: #2e2f42;
   text-align: center;
-  
+
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.32px;
   margin-bottom: 16px;
-  
 }
 
 .form-label {
   position: relative;
   display: block;
-  
+
   margin-bottom: 8px;
   color: var(--lightslate, #8e8f99);
 
   font-size: 12px;
 
   font-style: normal;
-  
+
   line-height: 14px;
   letter-spacing: 0.48px;
 }
@@ -737,52 +734,62 @@ button {
 .modal-form-label {
   display: block;
   margin-bottom: 4px;
-
 }
 
 .modal-form-input {
   width: 360px;
-  
+
   padding: 11px 38px;
   font-size: 18px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-}
-.modal-form-input::placeholder {
-
-  color: rgba(46, 47, 66, 0.40);
-font-size: 12px;
-line-height: 14px;
-letter-spacing: 0.48px;
 }
 
 .modal-form-input:focus {
-
   border-color: var(--primary-brand);
 }
 
+.modal-form-textarea {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.48px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea:focus {
+  border-color: var(--primary-brand);
+}
+
+.modal-form-textarea::placeholder {
+  color: currentColor;
+}
+
 .modal-form-icon {
-position: absolute;
-bottom: 8px;
-left: 16px;
-  fill: #2E2F42;
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-icon.name {
-
   position: absolute;
   bottom: 11px;
   left: 16px;
-  fill: #2E2F42;
-  
+  fill: #2e2f42;
 }
 
 .modal-form-input:focus + .modal-form-icon {
-
   fill: var(--primary-brand);
 }
 
@@ -790,15 +797,7 @@ input {
   font-family: inherit;
   display: block;
   width: 90%;
-  
 }
-
-textarea {
-
-  resize :none;
-
-}
-
 
 .form-button {
   display: block;
@@ -821,4 +820,3 @@ textarea {
 .form-button:focus {
   background-color: var(--action-color);
 }
-
