--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --primary-brand: #4d5ae5;
   --light-color: #ffffff;
   --footer-text: #f4f4fd;
+  --lightslate: #8e8f99;
 }
 
 /* Reset */
@@ -528,12 +529,18 @@ button {
   border: 1px solid var(--white, #FFF);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background-color: transparent;
+  color: #ffffff; 
+  font-size: 12px; 
+  line-height: 1.5; 
+  letter-spacing: 0.04em; 
+  padding-left: 16px; 
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
   
 }
 
 .footer_form-input::placeholder {
 padding: 8px 212px 8px 16px;
-  color: var(--white, #FFF);
+color: var(--light-color);
 font-size: 12px;
 line-height: 24px;
 letter-spacing: 0.48px;
@@ -541,13 +548,19 @@ letter-spacing: 0.48px;
 }
 
 .button-subscribe {
-display: flex;
-align-items: center;
-gap: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  
+  min-width: 165px; 
   color: var(--light-color);
   background-color: var(--primary-brand);
   border: none;
   padding: 8px 24px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
 }
 
 .social-title .subscribe {
@@ -559,6 +572,7 @@ letter-spacing: 0.64px;
 
 .button-subscribe-icon {
   fill: var(--light-color);
+  margin-left: 16px;
 }
 
 
@@ -713,6 +727,7 @@ letter-spacing: 0.64px;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  padding:  72px 24px 24px 24px;
 
   width: 408px;
   min-height: 584px;
@@ -761,47 +776,49 @@ letter-spacing: 0.64px;
   flex-direction: column;
 
   max-width: 408px;
-  padding: 72px 24px 24px;
+  
 }
 
 .modal-caption {
   display: block;
-  color: #2e2f42;
+  color: var(--main-color);
   text-align: center;
-
+  font-size: 16px;
   font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  line-height: 1.5; 
+  letter-spacing: 0.02em; 
   margin-bottom: 16px;
+  text-align: center; 
 }
+
+.div-modal-form {
+  margin-bottom: 8px;
+}
+
 
 .form-label {
   position: relative;
   display: block;
-
-  margin-bottom: 8px;
-  color: var(--lightslate, #8e8f99);
-
+  color: var(--lightslate);
   font-size: 12px;
-
-  font-style: normal;
-
-  line-height: 14px;
-  letter-spacing: 0.48px;
-}
-
-.modal-form-label {
-  display: block;
+  line-height: 1.17;
+  letter-spacing: 0.04em; 
   margin-bottom: 4px;
 }
 
+.input-container {
+
+
+}
+
 .modal-form-input {
-  width: 360px;
+  width: 100%; ;
   height: 40px;
-  padding: 11px 38px;
+  padding-left: 38px;
   font-size: 18px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent; 
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
@@ -836,17 +853,12 @@ letter-spacing: 0.64px;
 
 .modal-form-icon {
   position: absolute;
-  bottom: 8px;
+  
+  top: 50%; 
   left: 16px;
+  transform: translateY(-50%);
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-icon.name {
-  position: absolute;
-  bottom: 11px;
-  left: 16px;
-  fill: #2e2f42;
 }
 
 .modal-form-input:focus + .modal-form-icon {
