--- a/css/styles.css
+++ b/css/styles.css
@@ -533,7 +533,7 @@ button {
   font-size: 12px; 
   line-height: 1.5; 
   letter-spacing: 0.04em; 
-  padding-left: 16px; 
+  outline: transparent;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
   
 }
@@ -808,7 +808,7 @@ letter-spacing: 0.64px;
 
 .input-container {
 
-
+  position: relative;
 }
 
 .modal-form-input {
@@ -828,6 +828,10 @@ letter-spacing: 0.64px;
   border-color: var(--primary-brand);
 }
 
+.div-modal-form-comment {
+  margin-bottom: 16px 
+}
+
 .modal-form-textarea {
   width: 100%;
   height: 120px;
@@ -835,10 +839,11 @@ letter-spacing: 0.64px;
   resize: none;
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.48px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -853,8 +858,7 @@ letter-spacing: 0.64px;
 
 .modal-form-icon {
   position: absolute;
-  
-  top: 50%; 
+  top: 50%;
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
@@ -864,6 +868,8 @@ letter-spacing: 0.64px;
 .modal-form-input:focus + .modal-form-icon {
   fill: var(--primary-brand);
 }
+
+
 
 
 .form-button {
@@ -892,27 +898,32 @@ letter-spacing: 0.64px;
 
 
 .modal-form-agreement {
-  display: flex;
-  align-items: center;
-  margin-bottom: 24px;
-  gap: 8px;
+  font-size: 12px;
+  line-height: 1.17; 
+  letter-spacing: 0.04em; 
+  color: var(--lightslate);
+
 }
 
+.modal-form-checkbox {}
+
 .modal-form-custom-checkbox {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.40);
-  transition: border-color  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: transparent; 
+  transition: background-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-checkbox:checked + .modal-form-custom-checkbox {
 
-  border-color: var(--action-color);
+  fill: var(--footer-text);
   background-color: var(--action-color);
+  border: none;
 }
 
 .modal-form-checkbox-icon {
@@ -925,20 +936,13 @@ letter-spacing: 0.64px;
   opacity: 1;
 }
 
-.modal-form-agreement-desc {
-  color: #8E8F99;
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 14px;
-letter-spacing: 0.48px;
-}
-.modal-form-agreement-desc > a {
 
-color: #4D5AE5;
-text-decoration:underline;
+.div-modal-form-checkbox {
+
+  margin-bottom: 24px;
 }
 
 .modal-form-link {
+  color: #4D5AE5;
+text-decoration:underline;
 }
