--- a/css/styles.css
+++ b/css/styles.css
@@ -506,14 +506,12 @@ button {
 }
 
 .network-team-icon {
-
   margin-right: 80px;
 }
 
 /* Footer e-mail / subscribe */
 
 .ftr-form-info {
- 
 }
 .ftr-form-desc {
 }
@@ -525,34 +523,33 @@ button {
 .footer_form-input {
   width: 264px;
   height: 40px;
+  padding-left: 16px;
   border-radius: 4px;
-  border: 1px solid var(--white, #FFF);
+  border: 1px solid var(--white, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background-color: transparent;
-  color: #ffffff; 
-  font-size: 12px; 
-  line-height: 1.5; 
-  letter-spacing: 0.04em; 
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   outline: transparent;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15)); 
-  
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .footer_form-input::placeholder {
-padding: 8px 212px 8px 16px;
-color: var(--light-color);
-font-size: 12px;
-line-height: 24px;
-letter-spacing: 0.48px;
-
+  padding: 8px 212px 8px 0;
+  color: var(--light-color);
+  font-size: 12px;
+  line-height: 24px;
+  letter-spacing: 0.48px;
 }
 
 .button-subscribe {
   display: flex;
   align-items: center;
-  justify-content: center; 
-  
-  min-width: 165px; 
+  justify-content: center;
+
+  min-width: 165px;
   color: var(--light-color);
   background-color: var(--primary-brand);
   border: none;
@@ -560,22 +557,19 @@ letter-spacing: 0.48px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-
 }
 
 .social-title .subscribe {
-padding: 8px 64px 8px 24px;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0.64px;
+  padding: 8px 64px 8px 24px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.64px;
 }
 
 .button-subscribe-icon {
   fill: var(--light-color);
   margin-left: 16px;
 }
-
-
 
 /* Portfolio */
 
@@ -727,7 +721,7 @@ letter-spacing: 0.64px;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  padding:  72px 24px 24px 24px;
+  padding: 72px 24px 24px 24px;
 
   width: 408px;
   min-height: 584px;
@@ -776,7 +770,6 @@ letter-spacing: 0.64px;
   flex-direction: column;
 
   max-width: 408px;
-  
 }
 
 .modal-caption {
@@ -785,16 +778,15 @@ letter-spacing: 0.64px;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5; 
-  letter-spacing: 0.02em; 
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
-  text-align: center; 
+  text-align: center;
 }
 
 .div-modal-form {
   margin-bottom: 8px;
 }
-
 
 .form-label {
   position: relative;
@@ -802,26 +794,24 @@ letter-spacing: 0.64px;
   color: var(--lightslate);
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.04em; 
+  letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
 
 .input-container {
-
   position: relative;
 }
 
 .modal-form-input {
-  width: 100%; ;
+  width: 100%;
   height: 40px;
   padding-left: 38px;
   font-size: 18px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background-color: transparent; 
+  background-color: transparent;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .modal-form-input:focus {
@@ -829,7 +819,7 @@ letter-spacing: 0.64px;
 }
 
 .div-modal-form-comment {
-  margin-bottom: 16px 
+  margin-bottom: 16px;
 }
 
 .modal-form-textarea {
@@ -869,9 +859,6 @@ letter-spacing: 0.64px;
   fill: var(--primary-brand);
 }
 
-
-
-
 .form-button {
   display: block;
   margin: 0 auto;
@@ -896,53 +883,41 @@ letter-spacing: 0.64px;
 
 /* Agreement */
 
-
 .modal-form-agreement {
   font-size: 12px;
-  line-height: 1.17; 
-  letter-spacing: 0.04em; 
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   color: var(--lightslate);
-
 }
 
-.modal-form-checkbox {}
+.modal-form-checkbox {
+}
 
 .modal-form-custom-checkbox {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   width: 16px;
   height: 16px;
   border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.40);
-  fill: transparent; 
-  transition: background-color fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
 .modal-form-checkbox:checked + .modal-form-custom-checkbox {
-
   fill: var(--footer-text);
   background-color: var(--action-color);
   border: none;
 }
 
-.modal-form-checkbox-icon {
-
-  opacity: 0;
-}
-
-.modal-form-checkbox:checked + .modal-form-custom-checkbox > .modal-form-checkbox-icon {
-
-  opacity: 1;
-}
-
-
 .div-modal-form-checkbox {
-
   margin-bottom: 24px;
 }
 
 .modal-form-link {
-  color: #4D5AE5;
-text-decoration:underline;
+  color: var(--primary-brand);
+  text-decoration: underline;
 }
