--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,35 @@
   --lightslate: #8e8f99;
 }
 
-/* Reset */
+/* Base styles for small devices */
 .container {
-  max-width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
+  outline: 2px solid red;
+
+min-width: 320px;
+max-width: 395px;
+margin: 0 auto;
+padding-left: 16px;
+padding-right: 16px;
 }
+
+/* Tablet screen */
+
+@media screen and (min-width: 768px)
+{
+  .container {
+    max-width: 768px;
+    
+  }
+}
+/* Desctop screen */
+@media screen and (min-width: 1440px) {
+  .container
+   {max-width: 1158px;
+    padding: 0 15px;
+    
+  }
+}
+
 
 input {
   font-family: inherit;
@@ -74,8 +97,16 @@ button {
 }
 
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1440px)
+{
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 }
 
 .section-title {
@@ -89,18 +120,43 @@ button {
 }
 
 .title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
   color: var(--main-color);
+font-size: 36px;
+font-weight: 700;
+line-height: 111.111%; 
+letter-spacing: 0.72px;
+text-transform: capitalize;
+text-align: center;
 }
+
+@media only screen and (min-width: 1440px) {
+  .title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--main-color);
+    
+  }
+}
+
 .text {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--post-info-color);
-  margin-bottom: 8px;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5; 
+letter-spacing: 0.32px;
+}
+
+@media only screen and (min-width: 1440px) {
+  .text {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--post-info-color);
+    margin-bottom: 8px;
+    font-weight: 400;
+  }   
 }
 
 .visually-hidden {
@@ -292,32 +348,54 @@ button {
 
 /* Benefits section styles */
 
-.benefits-icon {
-}
-
-.bnfts-bg-color {
-  width: 264px;
-  height: 112px;
-  background-color: var(--footer-text);
-  border-radius: 4px;
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.bnfts-title {
-  margin-bottom: 8px;
-}
-
 .benefits-list {
-  display: flex;
-  gap: 24px;
+
+}
+.bnfts-title {
+  color: var(--navyblue, #2E2F42);
+
+font-size: 36px;
+font-weight: 700;
+line-height: 111.1%; 
+letter-spacing: 0.72px;
+text-transform: capitalize;
 }
 
-.benefits-item {
-  width: calc((100% - 72px) / 4);
+@media only screen and (min-width: 768px) {
+  .benefits-list{
+     
+    display: flex;
+    gap: 24px;
 }
+.bnfts-title {
+  text-align: left;
+}
+}
+
+@media only screen and (min-width: 1440px) {
+  .benefits-list{
+     
+      display: flex;
+      gap: 24px;
+  }
+  .bnfts-bg-color {
+    width: 264px;
+    height: 112px;
+    background-color: var(--footer-text);
+    border-radius: 4px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .benefits-item {
+    width: calc((100% - 72px) / 4);
+  }
+  .bnfts-title {
+    margin-bottom: 8px;
+  }
+}
+
 
 /* Section doing */
 
