--- a/css/styles.css
+++ b/css/styles.css
@@ -623,10 +623,33 @@ margin-bottom: 8px;
 .customers-container {
 }
 
+
 .clients-list {
+
   display: flex;
   justify-content: center;
-  gap: 24px;
+  column-gap: 16px;
+  row-gap:  72px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+
+@media only screen and (min-width: 768px) {
+  .clients-list {
+    display: flex;
+    justify-content: center;
+    column-gap: 24px;
+  }
+}
+
+
+@media only screen and (min-width: 1158px) {
+  .clients-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
 }
 
 .clients-item {
@@ -638,7 +661,7 @@ margin-bottom: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 168px;
+  width: 190px;
   height: 88px;
   color: #8e8f99;
   border-radius: 4px;
@@ -646,6 +669,13 @@ margin-bottom: 8px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media only screen and (min-width: 768px) {
+  .clients-link  {
+    width: 168px;
+  }
+}
+
 
 .clients-link:hover,
 .clients-link:focus {
@@ -659,14 +689,38 @@ margin-bottom: 8px;
 
 /* Footer styles */
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
+@media only screen and (max-width: 767px) {
+  .footer-container {
+    text-align: center;
+  } 
 }
+
+@media only screen and (min-width: 768px) {
+  .footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  } 
+}
+
+
+@media only screen and (min-width: 1158px) {
+  .footer-container {
+    display: flex;
+    align-items: baseline;
+  } 
+}
+
 
 .footer {
   background-color: var(--main-color);
-  padding: 100px 0;
+  padding: 96px 0;
+} 
+
+@media only screen and (min-width: 1158px) {
+  .footer {
+    padding: 100px 0;
+  } 
 }
 
 .logo-ftr {
@@ -680,6 +734,21 @@ margin-bottom: 8px;
   color: var(--footer-text);
   max-width: 264px;
 }
+
+@media only screen and (max-width: 767px) {
+  .footer-text {
+    margin: 0 auto;
+    text-align: left;
+  } 
+}
+
+
+@media only screen and (max-width: 767px) {
+  .ftr-logo {
+    margin: 0 auto 16px;
+  }
+}
+
 .ftr-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -704,29 +773,66 @@ margin-bottom: 8px;
 }
 
 .ftr-info {
-  margin-right: 120px;
+  margin-bottom: 72px;
 }
+
+@media only screen and (min-width: 768px) {
+  .ftr-info {
+    margin-right: 24px;  
+  } 
+}
+
+@media only screen and (min-width: 1158px) {
+  .ftr-info {
+    margin-right: 120px;   
+  }
+}
+
 
 .network-link.ftr:hover,
 .network-link.ftr:focus {
   background-color: #31d0aa;
 }
 
-.network-team-icon {
-  margin-right: 80px;
+.network-team-icon.ftr {
+
+margin-bottom: 72px;
 }
+
+@media only screen and (min-width: 768px) {
+  .network-team-icon.ftr {
+    margin-right: 80px;
+  } 
+}
+
+
+
 
 /* Footer e-mail / subscribe */
 
-.ftr-form-info {
+
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+  .ftr-form-info {
+    margin-inline-end: 124px;
+  } 
 }
-.ftr-form-desc {
+
+
+@media only screen and (min-width: 768px) {
+  .footer_form {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
 }
-.footer_form {
-  display: flex;
-  align-items: center;
-  gap: 24px;
+
+@media only screen and (max-width: 767px) {
+  .footer_form-label {
+  
+    width: 100%;
+  }
 }
+
 .footer_form-input {
   width: 264px;
   height: 40px;
@@ -743,6 +849,20 @@ margin-bottom: 8px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
+@media only screen and (max-width: 1157px) {
+  .footer_form-input {
+  
+    opacity: 0.30000001192092896;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .footer_form-input {
+    margin-bottom: 16px;
+    width: 100%;} 
+  
+}
+
 .footer_form-input::placeholder {
   padding: 8px 212px 8px 0;
   color: var(--light-color);
@@ -750,6 +870,8 @@ margin-bottom: 8px;
   line-height: 24px;
   letter-spacing: 0.48px;
 }
+
+
 
 .button-subscribe {
   display: flex;
@@ -771,6 +893,12 @@ margin-bottom: 8px;
   background-color: var(--action-color);
 }
 
+@media only screen and (max-width: 767px) {
+  .button-subscribe {
+    margin: 0 auto;
+  }
+}
+
 .social-title .subscribe {
   padding: 8px 64px 8px 24px;
   font-weight: 500;
@@ -782,6 +910,7 @@ margin-bottom: 8px;
   fill: var(--light-color);
   margin-left: 16px;
 }
+
 
 /* Portfolio */
 
